tests/NormalTests/paczka1/small_fuzzy/21499286.err
Error in line 3: KBQzEngzVSI 657 52,3
Error in line 10: H9eAMW8yu S349 9,9
Error in line 13: H9eAMW8yu S749 53,4
Error in line 11: VFgp7Jcm2S S275 32,5
